More cleaning up and added authors

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -37,17 +37,18 @@
 
 \title[QuickBundles]{Dipy, a library for the analysis of diffusion MRI data}
 
-\author[Garyfallidis, Brett, Correia, Williams and
-Nimmo-Smith]{Eleftherios~Garyfallidis\,$^{1,3,*}$, Matthew~Brett\,$^{2}$,
-  Marta~Morgado~Correia\,$^{3}$, Guy~B.~Williams\,$^{4}$ and
-  Ian~Nimmo-Smith\,$^{3}$\footnote{to whom correspondence should be
-    addressed. e-mail: garyfallidis@gmail.com}}
+\author[Garyfallidis, Brett, Amirbekian, Rokem,  van der Walt, Descoteaux, 
+Nimmo-Smith]{Eleftherios~Garyfallidis\,$^{1,2,*}$, Matthew~Brett\,$^{3}$,
+  Bago~Amirbekian\,$^{4}$, Ariel~Rokem\,$^{5}$, Stefan~van der Walt\,$^{7}$, Maxime~Descoteaux\,$^{2}$, Ian~Nimmo-Smith\,$^{6}$ \footnote{to whom correspondence should be addressed. e-mail: garyfallidis@gmail.com}}
 
-\address{\,$^{1}$Wolfson College, University of Cambridge, Cambridge, UK\\
-  \,$^{2}$University of California, Henry H. Wheeler, Jr. Brain Imaging Center, Berkeley, CA.\\
-  \,$^{3}$MRC Cognition and Brain Sciences Unit, Cambridge, UK.\\
-  \,$^{4}$Wolfson Brain Imaging Centre, University of Cambridge,
-  Cambridge, UK.}
+\address{\,$^{1}$University of Cambridge, Cambridge, UK\\
+  \,$^{2}$University of Sherbrooke, Sherbrooke, CA\\ 
+  \,$^{3}$University of California, Henry H. Wheeler, Jr. Brain Imaging Center, Berkeley, CA.\\
+  \,$^{4}$University of California, San Francisco, CA, USA\\    
+  \,$^{5}$Stanford University, Stanford, CA, USA\\
+  \,$^{6}$MRC Cognition and Brain Sciences Unit, Cambridge, UK\\
+  \,$^{7}$Stellenbosch University, Stellenbosch, South Africa\\  
+  }
 
 
 \history{}
