switch to scil bibliography

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -169,6 +169,10 @@ Comparison & Coverage \% (s.d.) & Overlap (s.d.) \\ \hline
 \end{tabular}}{}
 \end{table}
 
+References go like this: in parentheses
+\citep{Garyfallidis_thesis,Mori1999}, and in running text
+\citet{Garyfallidis_thesis}.
+
 \section*{Acknowledgments}
 Who do we need to acknowledge?
 
@@ -183,6 +187,6 @@ work?
 %\bibliographystyle{IEEEtran}
 %\bibliographystyle{elsarticle-harv}
 \selectlanguage{english}
-\bibliography{diffusion}
+\bibliography{scilBibTex}
 
 \end{document}
