Started working for the introduction

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -112,8 +112,10 @@ tractography, Probabilistic tractography, Visualisation.
 Here is a possible outline for the paper:
 
 \begin{verbatim}
+Short overview of other dMRI analysis tools
 Philosophy/Mission
 General Design Aspects
+How we work (git/github etc)
 File Formats 
 Preprocessing
    Eddy currents?
@@ -133,6 +135,15 @@ Post-tracking
    Connectivity matrix?
 Conclusions
 \end{verbatim}
+
+
+\section{Introduction}
+
+\emph{Diffusion MRI} (dMRI) \citep{stejskal-tanner:65, lebihan-breton:85,merboldt-hanicke-etal:85, taylor-bushell:85, callaghan:91} is the principal non-invasive method that provides information about the directional structure of neuronal pathways found in the white matter and other fibrous tissue.dMRI acquires one or more $T_{2}$ reference images, and a collection of diffusion-weighted images that attenuate the $T_{2}$ signal according to the amount of diffusion along prescribed gradient directions \citep{behrens-johansen-berg:09, jones:10}. 
+
+dMRI has an increasingly popularity for the last 10 years with more than five thousand papers published according PubMed only for 2012. This is also evident from the number of software tools available for the analysis of diffusion weighted images: 3D Slicer, MITK, etc.
+
+
 
 \section{Philosophy and Mission}
 
