Added similar software and references

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -141,8 +141,7 @@ Conclusions
 
 \emph{Diffusion MRI} (dMRI) \citep{stejskal-tanner:65, lebihan-breton:85,merboldt-hanicke-etal:85, taylor-bushell:85, callaghan:91} is the principal non-invasive method that provides information about the directional structure of neuronal pathways found in the white matter and other fibrous tissue.dMRI acquires one or more $T_{2}$ reference images, and a collection of diffusion-weighted images that attenuate the $T_{2}$ signal according to the amount of diffusion along prescribed gradient directions \citep{behrens-johansen-berg:09, jones:10}. 
 
-dMRI has an increasingly popularity for the last 10 years with more than five thousand papers published according PubMed only for 2012. This is also evident from the number of software tools available for the analysis of diffusion weighted images: 3D Slicer, MITK, etc.
-
+dMRI has an increasingly popularity for the last 10 years with more than five thousand papers published according PubMed only for 2012. This is also evident from the number of software tools available for the analysis of diffusion weighted images: 3D Slicer \citep{pieper:06}, AFNI \citep{cox-afni:12}, MITK \citep{fritzsche-mitk:12}, BrainVoyager QX \citep{goebel-brainvoyager:12}, Camino \citep{Cook2006}, DTI-Query \citep{sherbondy:05}, ExploreDTI \citep{leemans-exploredti:09}, FreeSurfer \citep{fischl-freesurfer:12}, FSL-FDT \citep{smith-fdt:04}, MedInria \citep{toussaint-souplet-etal:07}, MRtrix \citep{Tournier2012}, Diffusion Toolkit/Trackvis \citep{wang-diffusion-toolkit:07}, etc.
 
 
 \section{Philosophy and Mission}
