--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -11964,6 +11964,99 @@ keywords = "Fiber tracking"
   publisher={Wiley Online Library}
 }
 
+@inproceedings{pieper:06,
+  title={The NA-MIC Kit: ITK, VTK, pipelines, grids and 3D slicer as an open platform for the medical image computing community},
+  author={Pieper, Steve and Lorensen, Bill and Schroeder, Will and Kikinis, Ron},
+  booktitle={Biomedical Imaging: Nano to Macro, 2006. 3rd IEEE International Symposium on},
+  pages={698--701},
+  year={2006},
+  organization={IEEE}
+}
+
+@article{cox-afni:12,
+  title={AFNI: What a long strange trip it's been},
+  author={Cox, Robert W},
+  journal={Neuroimage},
+  volume={62},
+  number={2},
+  pages={743--747},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{fritzsche-mitk:12,
+  title={MITK Diffusion Imaging.},
+  author={Fritzsche, KH and Neher, PF and Reicht, I and van Bruggen, T and Goch, C and Reisert, M and Nolden, M and Zelzer, S and Meinzer, HP and Stieltjes, B},
+  journal={Methods of information in medicine},
+  volume={51},
+  number={5},
+  pages={441},
+  year={2012}
+}
+
+@article{goebel-brainvoyager:12,
+  title={BrainVoyager—Past, present, future},
+  author={Goebel, Rainer},
+  journal={NeuroImage},
+  volume={62},
+  number={2},
+  pages={748--756},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{sherbondy:05,
+  title={Exploring connectivity of the brain's white matter with dynamic queries},
+  author={Sherbondy, Anthony and Akers, David and Mackenzie, Rachel and Dougherty, Robert and Wandell, Brian},
+  journal={Visualization and Computer Graphics, IEEE Transactions on},
+  volume={11},
+  number={4},
+  pages={419--430},
+  year={2005},
+  publisher={IEEE}
+}
+
+@inproceedings{leemans-exploredti:09,
+  title={ExploreDTI: a graphical toolbox for processing, analyzing, and visualizing diffusion MR data},
+  author={Leemans, A and Jeurissen, B and Sijbers, J and Jones, DK},
+  booktitle={Proceedings of the International Society for Magnetic
+Resonance in Medicine},
+  volume={17},
+  pages={3537},
+  year={2009}
+}
+
+@article{fischl-freesurfer:12,
+  title={FreeSurfer},
+  author={Fischl, Bruce},
+  journal={NeuroImage},
+  volume={62},
+  number={2},
+  pages={774--781},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{smith-fdt:04,
+  title={Advances in functional and structural MR image analysis and implementation as FSL.},
+  author={Smith, Stephen M and Jenkinson, Mark and Woolrich, Mark W and Beckmann, Christian F and Behrens, TE and Johansen-Berg, Heidi and Bannister, Peter R and De Luca, Marilena and Drobnjak, Ivana and Flitney, David E and others},
+  journal={Neuroimage},
+  volume={23},
+  pages={S208-S219},
+  year={2004}
+}
+
+@inproceedings{wang-diffusion-toolkit:07,
+  title={Diffusion toolkit: a software package for diffusion imaging data processing and tractography},
+  author={Wang, R and Benner, T and Sorensen, AG and Wedeen, VJ},
+  booktitle={Proceedings of the International Society for Magnetic
+Resonance in Medicine},
+  volume={15},
+  pages={3720},
+  year={2007}
+}
+
+
 @Book{seunarine-alexander:09,
 title = {Multiple fibres: beyond the diffusion tensor},
 author = {K K Seunarine and D.C Alexander},
