Added more refs and updated body of introduction

--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -12057,6 +12057,52 @@ Resonance in Medicine},
 }
 
 
+@article{clayden-TractoR:11,
+  author =  "Jonathan D. Clayden and Susana Muñoz Maniega and Amos J. Storkey and Martin D. King and Mark E. Bastin and Chris A. Clark",
+  title = "TractoR: Magnetic Resonance Imaging and Tractography with R",
+  journal = "Journal of Statistical Software",
+  volume =  "44",
+  number =  "8",
+  pages = "1--18",
+  day =   "31",
+  month = "10",
+  year =  "2011",
+  CODEN = "JSSOBK",
+  ISSN =  "1548-7660",
+  bibdate = "2011-06-02",
+  URL =   "http://www.jstatsoft.org/v44/i08",
+  accepted =  "2011-06-02",
+  acknowledgement = "",
+  keywords =  "",
+  submitted = "2010-10-28",
+}
+
+@inproceedings{vaillancourt:11,
+author = {Vaillancourt, Olivier and Bor\'{e}, Arnaud and Girard, Gabriel and Descoteaux, Maxime},
+booktitle = {Organization for Human Brain Mapping (HBM'11)},
+title = {{A Fiber Navigator for Neurosurgical Planning}},
+year = {2011}
+}
+
+@inproceedings{chamberland:13,
+author = {Chamberland, Maxime and Descoteaux, Maxime.},
+booktitle = {The International Society for Magnetic Resonance in Medicine},
+title = {{Explore the brain white matter networks in real-time: Multi-sticks fiber tracking}},
+year = {2013}
+}
+
+@article{van_numpy:11,
+  title={The NumPy array: a structure for efficient numerical computation},
+  author={Van Der Walt, Stefan and Colbert, SChris and Varoquaux, Gael},
+  journal={Computing in Science \& Engineering},
+  volume={13},
+  number={2},
+  pages={22--30},
+  year={2011},
+  publisher={IEEE}
+}
+
+
 @Book{seunarine-alexander:09,
 title = {Multiple fibres: beyond the diffusion tensor},
 author = {K K Seunarine and D.C Alexander},
