--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -139,9 +139,14 @@ Conclusions
 
 \section{Introduction}
 
-\emph{Diffusion MRI} (dMRI) \citep{stejskal-tanner:65, lebihan-breton:85,merboldt-hanicke-etal:85, taylor-bushell:85, callaghan:91} is the principal non-invasive method that provides information about the directional structure of neuronal pathways found in the white matter and other fibrous tissue.dMRI acquires one or more $T_{2}$ reference images, and a collection of diffusion-weighted images that attenuate the $T_{2}$ signal according to the amount of diffusion along prescribed gradient directions \citep{behrens-johansen-berg:09, jones:10}. 
+\emph{Diffusion MRI} (dMRI) \citep{stejskal-tanner:65, lebihan-breton:85,merboldt-hanicke-etal:85, taylor-bushell:85, callaghan:91} is the principal non-invasive method that provides information about the directional structure of neuronal pathways found in the white matter and other body tissue with fiber-like structure. dMRI acquires one or 
+more $T_{2}$ reference images, and a collection of diffusion-weighted images that attenuate the $T_{2}$ signal according to the amount of diffusion along prescribed gradient directions \citep{behrens-johansen-berg:09, jones:10}. 
 
-dMRI has an increasingly popularity for the last 10 years with more than five thousand papers published according PubMed only for 2012. This is also evident from the number of software tools available for the analysis of diffusion weighted images: 3D Slicer \citep{pieper:06}, AFNI \citep{cox-afni:12}, MITK \citep{fritzsche-mitk:12}, BrainVoyager QX \citep{goebel-brainvoyager:12}, Camino \citep{Cook2006}, DTI-Query \citep{sherbondy:05}, ExploreDTI \citep{leemans-exploredti:09}, FreeSurfer \citep{fischl-freesurfer:12}, FSL-FDT \citep{smith-fdt:04}, MedInria \citep{toussaint-souplet-etal:07}, MRtrix \citep{Tournier2012}, Diffusion Toolkit/Trackvis \citep{wang-diffusion-toolkit:07}, etc.
+Because of its unique capability to depict structural connectivity, during the last 10 years, dMRI had an increasing popularity with more than five thousand papers published according to PubMed only for 2012. This popularity is also evident from the large number of software tools available for the analysis of diffusion weighted images. Most of these tools are written in C/C++: 3D Slicer \citep{pieper:06}, AFNI \citep{cox-afni:12}, MITK \citep{fritzsche-mitk:12}, BrainVoyager QX \citep{goebel-brainvoyager:12}, DTI-Query/Quench \citep{sherbondy:05}, FreeSurfer \citep{fischl-freesurfer:12}, FSL-FDT \citep{smith-fdt:04}, MedInria \citep{toussaint-souplet-etal:07}, MRtrix \citep{Tournier2012}, Diffusion Toolkit/Trackvis \citep{wang-diffusion-toolkit:07}, and FiberNavigator \citep{vaillancourt:11, chamberland:13}, R: TractoR \citep{ clayden-TractoR:11}, Java: Camino \citep{Cook2006} and Matlab: ExploreDTI \citep{leemans-exploredti:09}. 
+
+Dipy which stands for \textit{Diffusion Imaging in Python} is the first collective effort to create a diffusion MRI analysis library in Python language. Python is a general purpose, object-oriented programming language which emphasizes in code readability. Code readability, a key feature of Python enables people who are not necessarily programming gurus to understand and extend the underlying code.  
+
+Numpy paper \citep{van_numpy:11}.
 
 
 \section{Philosophy and Mission}
