--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -12102,6 +12102,34 @@ year = {2013}
   publisher={IEEE}
 }
 
+@article{perez_ipython:07,
+  title={IPython: a system for interactive scientific computing},
+  author={P{\'e}rez, Fernando and Granger, Brian E},
+  journal={Computing in Science \& Engineering},
+  volume={9},
+  number={3},
+  pages={21--29},
+  year={2007},
+  publisher={IEEE}
+}
+
+@article{perez_python:11,
+  title={Python: an ecosystem for scientific computing},
+  author={P{\'e}rez, Fernando and Granger, Brian E and Hunter, John D},
+  journal={Computing in Science \& Engineering},
+  volume={13},
+  number={2},
+  pages={13--21},
+  year={2011},
+  publisher={IEEE}
+}
+
+@book{mckinney_python:12,
+  title={Python for Data Analysis},
+  author={McKinney, William},
+  year={2012},
+  publisher={O'Reilly Media, Incorporated}
+}
 
 @Book{seunarine-alexander:09,
 title = {Multiple fibres: beyond the diffusion tensor},
