--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -17,20 +17,21 @@
 \definecolor{MatchingBrackets}{rgb}{0.25,0.5,0.5}
 \definecolor{Keywords}{rgb}{0,0.6,0}
 \definecolor{self}{rgb}{0,0,0}
-\definecolor{Strings}{rgb}{0,0.63,0}
+\definecolor{Strings}{rgb}{0.6,0.2,0}
 \definecolor{Comments}{rgb}{0,0.63,1}
 \definecolor{Backquotes}{rgb}{0,0,0}
 \definecolor{Classname}{rgb}{0,0,0}
 \definecolor{FunctionName}{rgb}{0,0,0}
 \definecolor{Operators}{rgb}{0,0,0}
 \definecolor{Background}{rgb}{1,1,1}
+\definecolor{Modules}{rgb}{0,0,0.8}
 
 \lstnewenvironment{python}[1][]{
 \lstset{
 %numbers=left,
 numberstyle=\footnotesize,
 numbersep=1em,
-xleftmargin=1em,
+xleftmargin=0em,
 framextopmargin=2em,
 framexbottommargin=2em,
 showspaces=false,
@@ -39,7 +40,7 @@ showstringspaces=false,
 %frame=l,
 tabsize=4,
 % Basic
-basicstyle=\ttfamily\small\setstretch{1},
+basicstyle=\ttfamily\footnotesize\setstretch{1},
 backgroundcolor=\color{Background},
 language=Python,
 % Comments
@@ -166,9 +167,7 @@ tractography, Probabilistic tractography, Visualisation.
 \end{abstract}
 
 \section{Skeleton}
-
 Here is a possible outline for the paper:
-
 \begin{verbatim}
 Short overview of other dMRI analysis tools
 Philosophy/Mission
@@ -194,43 +193,53 @@ Post-tracking
 Conclusions
 \end{verbatim}
 
-
 \section{Introduction}
 
 \emph{Diffusion MRI} (dMRI) \citep{stejskal-tanner:65, lebihan-breton:85,merboldt-hanicke-etal:85, taylor-bushell:85, callaghan:91} is the principal non-invasive method that provides information about the directional structure of neuronal pathways found in the white matter and other body tissue with fiber-like structure. dMRI acquires one or 
 more $T_{2}$ reference images, and a collection of diffusion-weighted images that attenuate the $T_{2}$ signal according to the amount of diffusion along prescribed gradient directions \citep{behrens-johansen-berg:09, jones:10}. 
 
-Because of its unique capability to depict structural connectivity, during the last 10 years, dMRI had an increasing popularity with more than five thousand papers published according to PubMed only for 2012. This popularity is also evident from the large number of software tools available for the analysis of diffusion weighted images. Most of these tools are written in C/C++: 3D Slicer \citep{pieper:06}, AFNI \citep{cox-afni:12}, MITK \citep{fritzsche-mitk:12}, BrainVoyager QX \citep{goebel-brainvoyager:12}, DTI-Query/Quench \citep{sherbondy:05}, FreeSurfer \citep{fischl-freesurfer:12}, FSL-FDT \citep{smith-fdt:04}, MedInria \citep{toussaint-souplet-etal:07}, MRtrix \citep{Tournier2012}, Diffusion Toolkit/Trackvis \citep{wang-diffusion-toolkit:07}, and FiberNavigator \citep{vaillancourt:11, chamberland:13}, R: TractoR \citep{ clayden-TractoR:11}, Java: Camino \citep{Cook2006} and Matlab: ExploreDTI \citep{leemans-exploredti:09}. 
+Because of its unique capability to depict structural connectivity, during the last 10 years, dMRI had an increasing popularity with more than five thousand papers published according to PubMed only for 2012. This popularity is also evident from the large number of software tools available for the analysis of diffusion weighted images. Most of these tools are written in C/C++: 3D Slicer \citep{pieper:06}, AFNI \citep{cox-afni:12}, MITK \citep{fritzsche-mitk:12}, BrainVoyager QX \citep{goebel-brainvoyager:12}, DTI-Query/Quench \citep{sherbondy:05}, FreeSurfer \citep{fischl-freesurfer:12}, FSL-FDT \citep{smith-fdt:04}, MedInria \citep{toussaint-souplet-etal:07}, MRtrix \citep{Tournier2012}, Diffusion Toolkit/Trackvis \citep{wang-diffusion-toolkit:07}, FiberNavigator \citep{vaillancourt:11, chamberland:13}. A few only are written in other languages as R: TractoR \citep{ clayden-TractoR:11}, Java: Camino \citep{Cook2006} and Matlab: ExploreDTI \citep{leemans-exploredti:09}. 
 
-Dipy which stands for \textit{Diffusion Imaging in Python} is the first collective effort to create a diffusion MRI analysis library in Python language. Python is a general purpose, object-oriented programming language which emphasizes in code readability. Code readability, a key feature of Python enables people who are not necessarily programming gurus to understand and extend the underlying code in a simple and comprehensive manner. We think that this is a powerful asset for the design of the next generation of medical imaging analysis tools. In the past we found that many researchers were using available tools without understanding the underlying details, often because the details were hidden from the users. Dipy tackles this problem be being free, open source (BSD license), simple and well documented. 
+Dipy which stands for \textit{Diffusion Imaging in Python} is the first collective effort to create a diffusion MRI analysis library using the Python language. Python is a general purpose, object-oriented programming language which emphasizes in code readability. Code readability, a key feature of Python enables people who are not necessarily programming gurus to understand and extend the underlying code in a simple and comprehensive manner. We think that this is a powerful asset for the design of the next generation of medical imaging analysis tools. In the past we found that many researchers were using available tools without understanding the underlying details, often because the details were hidden from the users. Dipy tackles this problem be being free, open source (BSD license), simple and well documented. In addition, the recent explosion of Python users, the many Python tools for scientific computing \citep{perez_python:11}, \citep{mckinney_python:12}, \citep{perez_ipython:07} and the recent stack of neuroimaging\footnote{\url{http://nipy.org}} modules make Dipy a nice addition for those who prefer Python as their favorite language.
 
 Dipy is built on top of production-ready high-performance Python libraries. Primarily, Dipy uses the Numpy Array \citep{van_numpy:11} as its core structure. Numpy arrays are the standard representation for numerical data in Python and enable efficient implementation of numerical computations allowing vectorizing calculations, avoiding copying data in memory, and minimizing operations. The Numpy Array is part of a more general numerical library (Numpy\footnote{\url{http://numpy.org}}) which can be used for example for matrix, tensor and linear algebra operations. Dipy also depends on Scipy\footnote{\url{http://scipy.org}} (a superset of Numpy) for nonlinear optimization and other volumetric operations. Cython\footnote{\url{http://cython.org}} is used in rare cases when both standard Python and Numpy/Scipy are not efficient enough for the task at hand. Cython interprets Python code into plain C performance by adding static type declarations. The last hard dependency for Dipy is Nibabel\footnote{\url{http://nipy.org/nibab}} which is used for loading and saving medical imaging datasets.
 
 Furthermore, Dipy recommends the use of IPython\footnote{\url{http://ipython.org}} for interacting with the datasets and debugging the code, the IPython notebook for teaching, Matplotlib\footnote{\url{http://matplotlib.org}} for plotting 2D/3D datasets and Python-VTK\footnote{\url{http://vtk.org}} for more advanced 3D interactive visualization. Nonetheless, these are optional dependencies and they are not required for the standard use of Dipy.
 
-\citep{perez_ipython:07}, \citep{perez_python:11}, \citep{mckinney_python:12}, 
-
-
-
+In the following sections, we will explain the philosophy and main design concepts behind Dipy. We will also give examples which cover different parts of the diffusion MR analysis from the local voxel reconstruction of orientation distribution functions to streamline generation and visualization. 
 
 \begin{python}
-from dipy.viz import fvtk
-ren = fvtk.ren()
-class Test(object):
-  def __init__(self, a):
-    pass
+fimg = "raw.nii.gz"
+fbval = "raw.bval"
+fbvec = "raw.bvec"
 
-@parametric
-def f(x):
-  return x**2
-for i in range(10):
-  print f(i)
+import nibabel as nib
+img = nib.load(fimg)
+data = img.get_data()
+
+from dipy.io import read_bvals_bvecs
+bvals, bvecs = read_bvals_bvecs(fbval, fbvec)
+
+from dipy.core.gradients import gradient_table
+gtab = gradient_table(bvals, bvecs)
+
+from dipy.reconst.dti import TensorModel
+ten = TensorModel(gtab)
+tenfit = ten.fit(data)
+
+from dipy.reconst.dti import fractional_anisotropy
+fa = fractional_anisotropy(tenfit.evals)
+
+from dipy.reconst.dti import color_fa
+cfa = color_fa(fa, tenfit.evecs)
 \end{python}
 
 
 \section{Philosophy and Mission}
 
-Someone will write this.
+The purpose of Dipy is to make it easier to do better diffusion MR imaging research. We aim to build software that is clearly written, clearly explained, a good fit for the underlying ideas and a natural home for collaboration. We hope that, if we fail to do this, you will let us know and we will try and make it better.
+
+\section{General design aspects}
 
 \section{LaTex Formatting Stuff}
 
@@ -274,9 +283,24 @@ Comparison & Coverage \% (s.d.) & Overlap (s.d.) \\ \hline
 \end{tabular}}{}
 \end{table}
 
-References go like this: in parentheses
-\citep{Garyfallidis_thesis,Mori1999}, and in running text
-\citet{Garyfallidis_thesis}.
+References go like this: in parentheses \citep{Garyfallidis_thesis,Mori1999}, and in running text \citet{Garyfallidis_thesis}.
+
+And here is an example of how to add some code.
+
+\begin{python}
+from dipy.viz import fvtk
+ren = fvtk.ren()
+class Test(object):
+  def __init__(self, a):
+    pass
+
+@parametric
+def f(x):
+  return x**2
+for i in range(10):
+  print f(i)
+\end{python}
+
 
 \section*{Acknowledgments}
 Who do we need to acknowledge?
