--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -206,7 +206,7 @@ Dipy is built on top of production-ready high-performance Python libraries. Prim
 
 Furthermore, Dipy recommends the use of IPython\footnote{\url{http://ipython.org}} for interacting with the datasets and debugging the code, the IPython notebook for teaching, Matplotlib\footnote{\url{http://matplotlib.org}} for plotting 2D/3D datasets and Python-VTK\footnote{\url{http://vtk.org}} for more advanced 3D interactive visualization. Nonetheless, these are optional dependencies and they are not required for the standard use of Dipy.
 
-In the following sections, we will explain the philosophy and main design concepts behind Dipy. We will also give examples which cover different parts of the diffusion MR analysis from the local voxel reconstruction of orientation distribution functions to streamline generation and visualization. 
+In the following sections, we will explain the philosophy and main design concepts behind Dipy. We will also give examples which cover different parts of the diffusion MR analysis pipeline from the local voxel reconstruction of orientation distribution functions to streamline generation and visualization. 
 
 \begin{python}
 fimg = "raw.nii.gz"
@@ -239,7 +239,11 @@ cfa = color_fa(fa, tenfit.evecs)
 
 The purpose of Dipy is to make it easier to do better diffusion MR imaging research. We aim to build software that is clearly written, clearly explained, a good fit for the underlying ideas and a natural home for collaboration. We hope that, if we fail to do this, you will let us know and we will try and make it better.
 
+Say something about the international collaboration and not being lab specific.
+
 \section{General design aspects}
+
+API (module diagram), Git/Github, continuous integration, sphinx for documentation, nosetests for testing
 
 \section{LaTex Formatting Stuff}
 
