--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -11995,7 +11995,7 @@ keywords = "Fiber tracking"
 }
 
 @article{goebel-brainvoyager:12,
-  title={BrainVoyager—Past, present, future},
+  title={BrainVoyager Past, present, future},
   author={Goebel, Rainer},
   journal={NeuroImage},
   volume={62},
